--- a/2010.html
+++ b/2010.html
@@ -30,23 +30,23 @@
           // CONTENT SOURCE
           // The optional add-on nanoPhotosProvider is used for this example - this is not mandatory and can easily be replaced by a list of medias
           items: [
-            { src: '../img/2010/HelloIMG1635356229831.jpeg', srct: '../img/2010/HelloIMG1635356229831.jpeg' },
-            { src: '../img/2010/HelloIMG1635356238490.jpeg', srct: '../img/2010/HelloIMG1635356238490.jpeg' },
-            { src: '../img/2010/HelloIMG1635356251540.jpeg', srct: '../img/2010/HelloIMG1635356251540.jpeg' },
-            { src: '../img/2010/HelloIMG1635356260274.jpeg', srct: '../img/2010/HelloIMG1635356260274.jpeg' },
-            { src: '../img/2010/HelloIMG1635356269075.jpeg', srct: '../img/2010/HelloIMG1635356269075.jpeg' },
-            { src: '../img/2010/HelloIMG1635356278936.jpeg', srct: '../img/2010/HelloIMG1635356278936.jpeg' },
-            { src: '../img/2010/HelloIMG1635356288114.jpeg', srct: '../img/2010/HelloIMG1635356288114.jpeg' },
-            { src: '../img/2010/HelloIMG1635356293786.jpeg', srct: '../img/2010/HelloIMG1635356293786.jpeg' },
-            { src: '../img/2010/HelloIMG1635356302644.jpeg', srct: '../img/2010/HelloIMG1635356302644.jpeg' },
-            { src: '../img/2010/HelloIMG1635356326069.jpeg', srct: '../img/2010/HelloIMG1635356326069.jpeg' },
-            { src: '../img/2010/HelloIMG1635356347024.jpeg', srct: '../img/2010/HelloIMG1635356347024.jpeg' },
-            { src: '../img/2010/HelloIMG1635356354048.jpeg', srct: '../img/2010/HelloIMG1635356354048.jpeg' },
-            { src: '../img/2010/HelloIMG1635356365974.jpeg', srct: '../img/2010/HelloIMG1635356365974.jpeg' },
-            { src: '../img/2010/HelloIMG1635356376533.jpeg', srct: '../img/2010/HelloIMG1635356376533.jpeg' },
-            { src: '../img/2010/HelloIMG1635356396907.jpeg', srct: '../img/2010/HelloIMG1635356396907.jpeg' },
-            { src: '../img/2010/HelloIMG1635356405758.jpeg', srct: '../img/2010/HelloIMG1635356405758.jpeg' },
-            { src: '../img/2010/HelloIMG1635356415400.jpeg', srct: '../img/2010/HelloIMG1635356415400.jpeg' }
+            { src: '/img/2010/HelloIMG1635356229831.jpeg', srct: '/img/2010/HelloIMG1635356229831.jpeg' },
+            { src: '/img/2010/HelloIMG1635356238490.jpeg', srct: '/img/2010/HelloIMG1635356238490.jpeg' },
+            { src: '/img/2010/HelloIMG1635356251540.jpeg', srct: '/img/2010/HelloIMG1635356251540.jpeg' },
+            { src: '/img/2010/HelloIMG1635356260274.jpeg', srct: '/img/2010/HelloIMG1635356260274.jpeg' },
+            { src: '/img/2010/HelloIMG1635356269075.jpeg', srct: '/img/2010/HelloIMG1635356269075.jpeg' },
+            { src: '/img/2010/HelloIMG1635356278936.jpeg', srct: '/img/2010/HelloIMG1635356278936.jpeg' },
+            { src: '/img/2010/HelloIMG1635356288114.jpeg', srct: '/img/2010/HelloIMG1635356288114.jpeg' },
+            { src: '/img/2010/HelloIMG1635356293786.jpeg', srct: '/img/2010/HelloIMG1635356293786.jpeg' },
+            { src: '/img/2010/HelloIMG1635356302644.jpeg', srct: '/img/2010/HelloIMG1635356302644.jpeg' },
+            { src: '/img/2010/HelloIMG1635356326069.jpeg', srct: '/img/2010/HelloIMG1635356326069.jpeg' },
+            { src: '/img/2010/HelloIMG1635356347024.jpeg', srct: '/img/2010/HelloIMG1635356347024.jpeg' },
+            { src: '/img/2010/HelloIMG1635356354048.jpeg', srct: '/img/2010/HelloIMG1635356354048.jpeg' },
+            { src: '/img/2010/HelloIMG1635356365974.jpeg', srct: '/img/2010/HelloIMG1635356365974.jpeg' },
+            { src: '/img/2010/HelloIMG1635356376533.jpeg', srct: '/img/2010/HelloIMG1635356376533.jpeg' },
+            { src: '/img/2010/HelloIMG1635356396907.jpeg', srct: '/img/2010/HelloIMG1635356396907.jpeg' },
+            { src: '/img/2010/HelloIMG1635356405758.jpeg', srct: '/img/2010/HelloIMG1635356405758.jpeg' },
+            { src: '/img/2010/HelloIMG1635356415400.jpeg', srct: '/img/2010/HelloIMG1635356415400.jpeg' }
           ],
 
           // GALLERY AND THUMBNAIL LAYOUT
