--- a/2011.html
+++ b/2011.html
@@ -30,23 +30,23 @@
           // CONTENT SOURCE
           // The optional add-on nanoPhotosProvider is used for this example - this is not mandatory and can easily be replaced by a list of medias
           items: [
-            { src: '../img/2011/HelloIMG1635355922768.jpeg', srct: '../img/2011/HelloIMG1635355922768.jpeg' },
-            { src: '../img/2011/HelloIMG1635355925714.jpeg', srct: '../img/2011/HelloIMG1635355925714.jpeg' },
-            { src: '../img/2011/HelloIMG1635355928622.jpeg', srct: '../img/2011/HelloIMG1635355928622.jpeg' },
-            { src: '../img/2011/HelloIMG1635355939027.jpeg', srct: '../img/2011/HelloIMG1635355939027.jpeg' },
-            { src: '../img/2011/HelloIMG1635355944163.jpeg', srct: '../img/2011/HelloIMG1635355944163.jpeg' },
-            { src: '../img/2011/HelloIMG1635355953390.jpeg', srct: '../img/2011/HelloIMG1635355953390.jpeg' },
-            { src: '../img/2011/HelloIMG1635355957897.jpeg', srct: '../img/2011/HelloIMG1635355957897.jpeg' },
-            { src: '../img/2011/HelloIMG1635355965452.jpeg', srct: '../img/2011/HelloIMG1635355965452.jpeg' },
-            { src: '../img/2011/HelloIMG1635355972166.jpeg', srct: '../img/2011/HelloIMG1635355972166.jpeg' },
-            { src: '../img/2011/HelloIMG1635355983000.jpeg', srct: '../img/2011/HelloIMG1635355983000.jpeg' },
-            { src: '../img/2011/HelloIMG1635355989919.jpeg', srct: '../img/2011/HelloIMG1635355989919.jpeg' },
-            { src: '../img/2011/HelloIMG1635355996976.jpeg', srct: '../img/2011/HelloIMG1635355996976.jpeg' },
-            { src: '../img/2011/HelloIMG1635356005662.jpeg', srct: '../img/2011/HelloIMG1635356005662.jpeg' },
-            { src: '../img/2011/HelloIMG1635356017938.jpeg', srct: '../img/2011/HelloIMG1635356017938.jpeg' },
-            { src: '../img/2011/HelloIMG1635356030072.jpeg', srct: '../img/2011/HelloIMG1635356030072.jpeg' },
-            { src: '../img/2011/HelloIMG1635356049827.jpeg', srct: '../img/2011/HelloIMG1635356049827.jpeg' },
-            { src: '../img/2011/HelloIMG1635356056365.jpeg', srct: '../img/2011/HelloIMG1635356056365.jpeg' }
+            { src: '/img/2011/HelloIMG1635355922768.jpeg', srct: '/img/2011/HelloIMG1635355922768.jpeg' },
+            { src: '/img/2011/HelloIMG1635355925714.jpeg', srct: '/img/2011/HelloIMG1635355925714.jpeg' },
+            { src: '/img/2011/HelloIMG1635355928622.jpeg', srct: '/img/2011/HelloIMG1635355928622.jpeg' },
+            { src: '/img/2011/HelloIMG1635355939027.jpeg', srct: '/img/2011/HelloIMG1635355939027.jpeg' },
+            { src: '/img/2011/HelloIMG1635355944163.jpeg', srct: '/img/2011/HelloIMG1635355944163.jpeg' },
+            { src: '/img/2011/HelloIMG1635355953390.jpeg', srct: '/img/2011/HelloIMG1635355953390.jpeg' },
+            { src: '/img/2011/HelloIMG1635355957897.jpeg', srct: '/img/2011/HelloIMG1635355957897.jpeg' },
+            { src: '/img/2011/HelloIMG1635355965452.jpeg', srct: '/img/2011/HelloIMG1635355965452.jpeg' },
+            { src: '/img/2011/HelloIMG1635355972166.jpeg', srct: '/img/2011/HelloIMG1635355972166.jpeg' },
+            { src: '/img/2011/HelloIMG1635355983000.jpeg', srct: '/img/2011/HelloIMG1635355983000.jpeg' },
+            { src: '/img/2011/HelloIMG1635355989919.jpeg', srct: '/img/2011/HelloIMG1635355989919.jpeg' },
+            { src: '/img/2011/HelloIMG1635355996976.jpeg', srct: '/img/2011/HelloIMG1635355996976.jpeg' },
+            { src: '/img/2011/HelloIMG1635356005662.jpeg', srct: '/img/2011/HelloIMG1635356005662.jpeg' },
+            { src: '/img/2011/HelloIMG1635356017938.jpeg', srct: '/img/2011/HelloIMG1635356017938.jpeg' },
+            { src: '/img/2011/HelloIMG1635356030072.jpeg', srct: '/img/2011/HelloIMG1635356030072.jpeg' },
+            { src: '/img/2011/HelloIMG1635356049827.jpeg', srct: '/img/2011/HelloIMG1635356049827.jpeg' },
+            { src: '/img/2011/HelloIMG1635356056365.jpeg', srct: '/img/2011/HelloIMG1635356056365.jpeg' }
           ],
 
           // GALLERY AND THUMBNAIL LAYOUT
