--- a/1995.html
+++ b/1995.html
@@ -30,21 +30,21 @@
           // CONTENT SOURCE
           // The optional add-on nanoPhotosProvider is used for this example - this is not mandatory and can easily be replaced by a list of medias
           items: [
-            { src: '../img/promo95_page-0001.jpg', srct: '../img/promo95_page-0001.jpg' },
-            { src: '../img/promo95_page-0002.jpg', srct: '../img/promo95_page-0002.jpg' },
-            { src: '../img/promo95_page-0003.jpg', srct: '../img/promo95_page-0003.jpg' },
-            { src: '../img/promo95_page-0004.jpg', srct: '../img/promo95_page-0004.jpg' },
-            { src: '../img/promo95_page-0005.jpg', srct: '../img/promo95_page-0005.jpg' },
-            { src: '../img/promo95_page-0006.jpg', srct: '../img/promo95_page-0006.jpg' },
-            { src: '../img/promo95_page-0007.jpg', srct: '../img/promo95_page-0007.jpg' },
-            { src: '../img/promo95_page-0008.jpg', srct: '../img/promo95_page-0008.jpg' },
-            { src: '../img/promo95_page-0009.jpg', srct: '../img/promo95_page-0009.jpg' },
-            { src: '../img/promo95_page-0010.jpg', srct: '../img/promo95_page-0010.jpg' },
-            { src: '../img/promo95_page-0011.jpg', srct: '../img/promo95_page-0011.jpg' },
-            { src: '../img/promo95_page-0012.jpg', srct: '../img/promo95_page-0012.jpg' },
-            { src: '../img/promo95_page-0013.jpg', srct: '../img/promo95_page-0013.jpg' },
-            { src: '../img/promo95_page-0014.jpg', srct: '../img/promo95_page-0014.jpg' },
-            { src: '../img/promo95_page-0015.jpg', srct: '../img/promo95_page-0015.jpg' },
+            { src: '/img/promo95_page-0001.jpg', srct: '/img/promo95_page-0001.jpg' },
+            { src: '/img/promo95_page-0002.jpg', srct: '/img/promo95_page-0002.jpg' },
+            { src: '/img/promo95_page-0003.jpg', srct: '/img/promo95_page-0003.jpg' },
+            { src: '/img/promo95_page-0004.jpg', srct: '/img/promo95_page-0004.jpg' },
+            { src: '/img/promo95_page-0005.jpg', srct: '/img/promo95_page-0005.jpg' },
+            { src: '/img/promo95_page-0006.jpg', srct: '/img/promo95_page-0006.jpg' },
+            { src: '/img/promo95_page-0007.jpg', srct: '/img/promo95_page-0007.jpg' },
+            { src: '/img/promo95_page-0008.jpg', srct: '/img/promo95_page-0008.jpg' },
+            { src: '/img/promo95_page-0009.jpg', srct: '/img/promo95_page-0009.jpg' },
+            { src: '/img/promo95_page-0010.jpg', srct: '/img/promo95_page-0010.jpg' },
+            { src: '/img/promo95_page-0011.jpg', srct: '/img/promo95_page-0011.jpg' },
+            { src: '/img/promo95_page-0012.jpg', srct: '/img/promo95_page-0012.jpg' },
+            { src: '/img/promo95_page-0013.jpg', srct: '/img/promo95_page-0013.jpg' },
+            { src: '/img/promo95_page-0014.jpg', srct: '/img/promo95_page-0014.jpg' },
+            { src: '/img/promo95_page-0015.jpg', srct: '/img/promo95_page-0015.jpg' },
           ],
 
           // GALLERY AND THUMBNAIL LAYOUT
