--- a/2001.html
+++ b/2001.html
@@ -25,25 +25,25 @@
           // CONTENT SOURCE
           // The optional add-on nanoPhotosProvider is used for this example - this is not mandatory and can easily be replaced by a list of medias
           items: [
-            { src: '../img/2001/HelloIMG1635290888274.jpeg', srct: '../img/2001/HelloIMG1635290888274.jpeg' },
-            { src: '../img/2001/HelloIMG1635290892934.jpeg', srct: '../img/2001/HelloIMG1635290892934.jpeg' },
-            { src: '../img/2001/HelloIMG1635290900391.jpeg', srct: '../img/2001/HelloIMG1635290900391.jpeg' },
-            { src: '../img/2001/HelloIMG1635290909617.jpeg', srct: '../img/2001/HelloIMG1635290909617.jpeg' },
-            { src: '../img/2001/HelloIMG1635290914697.jpeg', srct: '../img/2001/HelloIMG1635290914697.jpeg' },
-            { src: '../img/2001/HelloIMG1635290919363.jpeg', srct: '../img/2001/HelloIMG1635290919363.jpeg' },
-            { src: '../img/2001/HelloIMG1635290924788.jpeg', srct: '../img/2001/HelloIMG1635290924788.jpeg' },
-            { src: '../img/2001/HelloIMG1635290930726.jpeg', srct: '../img/2001/HelloIMG1635290930726.jpeg' },
-            { src: '../img/2001/HelloIMG1635291039663.jpeg', srct: '../img/2001/HelloIMG1635291039663.jpeg' },
-            { src: '../img/2001/HelloIMG1635291045858.jpeg', srct: '../img/2001/HelloIMG1635291045858.jpeg' },
-            { src: '../img/2001/HelloIMG1635291053245.jpeg', srct: '../img/2001/HelloIMG1635291053245.jpeg' },
-            { src: '../img/2001/HelloIMG1635291059518.jpeg', srct: '../img/2001/HelloIMG1635291059518.jpeg' },
-            { src: '../img/2001/HelloIMG1635291065036.jpeg', srct: '../img/2001/HelloIMG1635291065036.jpeg' },
-            { src: '../img/2001/HelloIMG1635291072403.jpeg', srct: '../img/2001/HelloIMG1635291072403.jpeg' },
-            { src: '../img/2001/HelloIMG1635291080537.jpeg', srct: '../img/2001/HelloIMG1635291080537.jpeg' },
-            { src: '../img/2001/HelloIMG1635291086329.jpeg', srct: '../img/2001/HelloIMG1635291086329.jpeg' },
-            { src: '../img/2001/HelloIMG1635291092195.jpeg', srct: '../img/2001/HelloIMG1635291092195.jpeg' },
-            { src: '../img/2001/HelloIMG1635291101407.jpeg', srct: '../img/2001/HelloIMG1635291101407.jpeg' },
-            { src: '../img/2001/HelloIMG1635291108127.jpeg', srct: '../img/2001/HelloIMG1635291108127.jpeg' },
+            { src: '/img/2001/HelloIMG1635290888274.jpeg', srct: '/img/2001/HelloIMG1635290888274.jpeg' },
+            { src: '/img/2001/HelloIMG1635290892934.jpeg', srct: '/img/2001/HelloIMG1635290892934.jpeg' },
+            { src: '/img/2001/HelloIMG1635290900391.jpeg', srct: '/img/2001/HelloIMG1635290900391.jpeg' },
+            { src: '/img/2001/HelloIMG1635290909617.jpeg', srct: '/img/2001/HelloIMG1635290909617.jpeg' },
+            { src: '/img/2001/HelloIMG1635290914697.jpeg', srct: '/img/2001/HelloIMG1635290914697.jpeg' },
+            { src: '/img/2001/HelloIMG1635290919363.jpeg', srct: '/img/2001/HelloIMG1635290919363.jpeg' },
+            { src: '/img/2001/HelloIMG1635290924788.jpeg', srct: '/img/2001/HelloIMG1635290924788.jpeg' },
+            { src: '/img/2001/HelloIMG1635290930726.jpeg', srct: '/img/2001/HelloIMG1635290930726.jpeg' },
+            { src: '/img/2001/HelloIMG1635291039663.jpeg', srct: '/img/2001/HelloIMG1635291039663.jpeg' },
+            { src: '/img/2001/HelloIMG1635291045858.jpeg', srct: '/img/2001/HelloIMG1635291045858.jpeg' },
+            { src: '/img/2001/HelloIMG1635291053245.jpeg', srct: '/img/2001/HelloIMG1635291053245.jpeg' },
+            { src: '/img/2001/HelloIMG1635291059518.jpeg', srct: '/img/2001/HelloIMG1635291059518.jpeg' },
+            { src: '/img/2001/HelloIMG1635291065036.jpeg', srct: '/img/2001/HelloIMG1635291065036.jpeg' },
+            { src: '/img/2001/HelloIMG1635291072403.jpeg', srct: '/img/2001/HelloIMG1635291072403.jpeg' },
+            { src: '/img/2001/HelloIMG1635291080537.jpeg', srct: '/img/2001/HelloIMG1635291080537.jpeg' },
+            { src: '/img/2001/HelloIMG1635291086329.jpeg', srct: '/img/2001/HelloIMG1635291086329.jpeg' },
+            { src: '/img/2001/HelloIMG1635291092195.jpeg', srct: '/img/2001/HelloIMG1635291092195.jpeg' },
+            { src: '/img/2001/HelloIMG1635291101407.jpeg', srct: '/img/2001/HelloIMG1635291101407.jpeg' },
+            { src: '/img/2001/HelloIMG1635291108127.jpeg', srct: '/img/2001/HelloIMG1635291108127.jpeg' },
           ],
 
           // GALLERY AND THUMBNAIL LAYOUT
