--- a/1995.html
+++ b/1995.html
@@ -14,11 +14,6 @@
 </head>
 <body>
   <div id="nanogallery">
-    <!-- <a href="../img/1970/9a5bf9ed-5887-4032-851d-1ec25a048c9a.jpg" data-ngthumb="../img/1970/9a5bf9ed-5887-4032-851d-1ec25a048c9a.jpg">title 1</a>
-    <a href="../img/1970/72106f33-1846-4318-9bf1-a07cea85d5d3.jpg" data-ngthumb="../img/1970/72106f33-1846-4318-9bf1-a07cea85d5d3.jpg">title 2</a>
-    <a href="../img/1970/aede5e36-7520-466e-8445-aab1fe383cb9.jpg" data-ngthumb="../img/1970/aede5e36-7520-466e-8445-aab1fe383cb9.jpg">title 3</a>
-    <a href="../img/1970/bffae738-a291-40d5-980f-a6d54ed00baa.jpg" data-ngthumb="../img/1970/bffae738-a291-40d5-980f-a6d54ed00baa.jpg">title 4</a>
-    ... -->
   </div>
 </body>
 
@@ -30,21 +25,21 @@
           // CONTENT SOURCE
           // The optional add-on nanoPhotosProvider is used for this example - this is not mandatory and can easily be replaced by a list of medias
           items: [
-            { src: '/img/promo95_page-0001.jpg', srct: '/img/promo95_page-0001.jpg' },
-            { src: '/img/promo95_page-0002.jpg', srct: '/img/promo95_page-0002.jpg' },
-            { src: '/img/promo95_page-0003.jpg', srct: '/img/promo95_page-0003.jpg' },
-            { src: '/img/promo95_page-0004.jpg', srct: '/img/promo95_page-0004.jpg' },
-            { src: '/img/promo95_page-0005.jpg', srct: '/img/promo95_page-0005.jpg' },
-            { src: '/img/promo95_page-0006.jpg', srct: '/img/promo95_page-0006.jpg' },
-            { src: '/img/promo95_page-0007.jpg', srct: '/img/promo95_page-0007.jpg' },
-            { src: '/img/promo95_page-0008.jpg', srct: '/img/promo95_page-0008.jpg' },
-            { src: '/img/promo95_page-0009.jpg', srct: '/img/promo95_page-0009.jpg' },
-            { src: '/img/promo95_page-0010.jpg', srct: '/img/promo95_page-0010.jpg' },
-            { src: '/img/promo95_page-0011.jpg', srct: '/img/promo95_page-0011.jpg' },
-            { src: '/img/promo95_page-0012.jpg', srct: '/img/promo95_page-0012.jpg' },
-            { src: '/img/promo95_page-0013.jpg', srct: '/img/promo95_page-0013.jpg' },
-            { src: '/img/promo95_page-0014.jpg', srct: '/img/promo95_page-0014.jpg' },
-            { src: '/img/promo95_page-0015.jpg', srct: '/img/promo95_page-0015.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0001.jpg', srct: '/aeam-rosario/img/promo95_page-0001.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0002.jpg', srct: '/aeam-rosario/img/promo95_page-0002.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0003.jpg', srct: '/aeam-rosario/img/promo95_page-0003.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0004.jpg', srct: '/aeam-rosario/img/promo95_page-0004.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0005.jpg', srct: '/aeam-rosario/img/promo95_page-0005.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0006.jpg', srct: '/aeam-rosario/img/promo95_page-0006.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0007.jpg', srct: '/aeam-rosario/img/promo95_page-0007.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0008.jpg', srct: '/aeam-rosario/img/promo95_page-0008.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0009.jpg', srct: '/aeam-rosario/img/promo95_page-0009.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0010.jpg', srct: '/aeam-rosario/img/promo95_page-0010.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0011.jpg', srct: '/aeam-rosario/img/promo95_page-0011.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0012.jpg', srct: '/aeam-rosario/img/promo95_page-0012.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0013.jpg', srct: '/aeam-rosario/img/promo95_page-0013.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0014.jpg', srct: '/aeam-rosario/img/promo95_page-0014.jpg' },
+            { src: '/aeam-rosario/img/promo95_page-0015.jpg', srct: '/aeam-rosario/img/promo95_page-0015.jpg' },
           ],
 
           // GALLERY AND THUMBNAIL LAYOUT
