--- a/2001.html
+++ b/2001.html
@@ -26,9 +26,11 @@
           // The optional add-on nanoPhotosProvider is used for this example - this is not mandatory and can easily be replaced by a list of medias
           items: [
             { src: '/aeam-rosario/img/2001/HelloIMG1635290888274.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635290888274.jpeg' },
+            { src: '/aeam-rosario/img/2001/HelloIMG1635290909617.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635290909617.jpeg' },
+            { src: '/aeam-rosario/img/2001/HelloIMG1635291108127.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635291108127.jpeg' },
+            { src: '/aeam-rosario/img/2001/HelloIMG1635290892888.jpg', srct: '/aeam-rosario/img/2001/HelloIMG1635290892888.jpg' },
             { src: '/aeam-rosario/img/2001/HelloIMG1635290892934.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635290892934.jpeg' },
             { src: '/aeam-rosario/img/2001/HelloIMG1635290900391.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635290900391.jpeg' },
-            { src: '/aeam-rosario/img/2001/HelloIMG1635290909617.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635290909617.jpeg' },
             { src: '/aeam-rosario/img/2001/HelloIMG1635290914697.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635290914697.jpeg' },
             { src: '/aeam-rosario/img/2001/HelloIMG1635290919363.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635290919363.jpeg' },
             { src: '/aeam-rosario/img/2001/HelloIMG1635290924788.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635290924788.jpeg' },
@@ -43,7 +45,6 @@
             { src: '/aeam-rosario/img/2001/HelloIMG1635291086329.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635291086329.jpeg' },
             { src: '/aeam-rosario/img/2001/HelloIMG1635291092195.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635291092195.jpeg' },
             { src: '/aeam-rosario/img/2001/HelloIMG1635291101407.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635291101407.jpeg' },
-            { src: '/aeam-rosario/img/2001/HelloIMG1635291108127.jpeg', srct: '/aeam-rosario/img/2001/HelloIMG1635291108127.jpeg' },
           ],
 
           // GALLERY AND THUMBNAIL LAYOUT
