--- a/himno.html
+++ b/himno.html
@@ -7,6 +7,6 @@
   <title>Nuestro Himno - AEAM</title>
 </head>
 <body>
-  <img src="/aeam-rosario/img/himno/himno.jpeg" alt="Himno">
+  <img width="100%" src="/aeam-rosario/img/himno/himno.jpeg" alt="Himno">
 </body>
 </html>
