--- a/1999.html
+++ b/1999.html
@@ -30,28 +30,28 @@
           // CONTENT SOURCE
           // The optional add-on nanoPhotosProvider is used for this example - this is not mandatory and can easily be replaced by a list of medias
           items: [
-            { src: '/img/1999/1.webp', srct: '/img/1999/1.webp' },
-            { src: '/img/1999/2.webp', srct: '/img/1999/2.webp' },
-            { src: '/img/1999/3.webp', srct: '/img/1999/3.webp' },
-            { src: '/img/1999/4.webp', srct: '/img/1999/4.webp' },
-            { src: '/img/1999/5.webp', srct: '/img/1999/5.webp' },
-            { src: '/img/1999/6.webp', srct: '/img/1999/6.webp' },
-            { src: '/img/1999/7.webp', srct: '/img/1999/7.webp' },
-            { src: '/img/1999/8.webp', srct: '/img/1999/8.webp' },
-            { src: '/img/1999/9.webp', srct: '/img/1999/9.webp' },
-            { src: '/img/1999/10.webp', srct: '/img/1999/10.webp' },
-            { src: '/img/1999/11.webp', srct: '/img/1999/11.webp' },
-            { src: '/img/1999/12.webp', srct: '/img/1999/12.webp' },
-            { src: '/img/1999/13.webp', srct: '/img/1999/13.webp' },
-            { src: '/img/1999/14.webp', srct: '/img/1999/14.webp' },
-            { src: '/img/1999/15.webp', srct: '/img/1999/15.webp' },
-            { src: '/img/1999/16.webp', srct: '/img/1999/16.webp' },
-            { src: '/img/1999/17.webp', srct: '/img/1999/17.webp' },
-            { src: '/img/1999/18.webp', srct: '/img/1999/18.webp' },
-            { src: '/img/1999/19.webp', srct: '/img/1999/19.webp' },
-            { src: '/img/1999/20.webp', srct: '/img/1999/20.webp' },
-            { src: '/img/1999/21.webp', srct: '/img/1999/21.webp' },
-            { src: '/img/1999/22.webp', srct: '/img/1999/22.webp' }
+            { src: '/aeam-rosario/img/1999/1.webp', srct: '/aeam-rosario/img/1999/1.webp' },
+            { src: '/aeam-rosario/img/1999/2.webp', srct: '/aeam-rosario/img/1999/2.webp' },
+            { src: '/aeam-rosario/img/1999/3.webp', srct: '/aeam-rosario/img/1999/3.webp' },
+            { src: '/aeam-rosario/img/1999/4.webp', srct: '/aeam-rosario/img/1999/4.webp' },
+            { src: '/aeam-rosario/img/1999/5.webp', srct: '/aeam-rosario/img/1999/5.webp' },
+            { src: '/aeam-rosario/img/1999/6.webp', srct: '/aeam-rosario/img/1999/6.webp' },
+            { src: '/aeam-rosario/img/1999/7.webp', srct: '/aeam-rosario/img/1999/7.webp' },
+            { src: '/aeam-rosario/img/1999/8.webp', srct: '/aeam-rosario/img/1999/8.webp' },
+            { src: '/aeam-rosario/img/1999/9.webp', srct: '/aeam-rosario/img/1999/9.webp' },
+            { src: '/aeam-rosario/img/1999/10.webp', srct: '/aeam-rosario/img/1999/10.webp' },
+            { src: '/aeam-rosario/img/1999/11.webp', srct: '/aeam-rosario/img/1999/11.webp' },
+            { src: '/aeam-rosario/img/1999/12.webp', srct: '/aeam-rosario/img/1999/12.webp' },
+            { src: '/aeam-rosario/img/1999/13.webp', srct: '/aeam-rosario/img/1999/13.webp' },
+            { src: '/aeam-rosario/img/1999/14.webp', srct: '/aeam-rosario/img/1999/14.webp' },
+            { src: '/aeam-rosario/img/1999/15.webp', srct: '/aeam-rosario/img/1999/15.webp' },
+            { src: '/aeam-rosario/img/1999/16.webp', srct: '/aeam-rosario/img/1999/16.webp' },
+            { src: '/aeam-rosario/img/1999/17.webp', srct: '/aeam-rosario/img/1999/17.webp' },
+            { src: '/aeam-rosario/img/1999/18.webp', srct: '/aeam-rosario/img/1999/18.webp' },
+            { src: '/aeam-rosario/img/1999/19.webp', srct: '/aeam-rosario/img/1999/19.webp' },
+            { src: '/aeam-rosario/img/1999/20.webp', srct: '/aeam-rosario/img/1999/20.webp' },
+            { src: '/aeam-rosario/img/1999/21.webp', srct: '/aeam-rosario/img/1999/21.webp' },
+            { src: '/aeam-rosario/img/1999/22.webp', srct: '/aeam-rosario/img/1999/22.webp' }
           ],
 
           // GALLERY AND THUMBNAIL LAYOUT
